# exopanel

./: CMakeLists.txt  LICENSE  README.md  app.js  exopanel.desktop  index.html  package-lock.json  package.json  window.js
debian/: changelog  control  rules
src/: .MainWindow.ui.swp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  resources.qrc  version.h.in
src/images/: exodus.xcf
